# comp814-assignment2

./: .gitignore  README.md  assignment_instructions.md  example.json  pyproject.toml  pytest.ini  test_final_implementation.py  test_generic_lda.py  test_improved_taxonomy.py  test_simple_generic_lda.py
paper/: build.sh  comp814.tex  references.bib
paper/modules/: _experiment_results.md  data_parsing.md  data_transformation.md  lda_info.md  lda_topic_extraction.md  literature_review_lda.md  paper_structure.md  result_aggregation.md  topic_simplifying.md
scripts/: full_analysis_dataset.py
src/topic_extractor/: __init__.py  data_extraction.py  data_preparation.py  data_transformation.py  demographic_topic_analysis.py  lda_extraction.py  lda_tranformer_extractor.py  results_aggregation.py  tfidf_extractor.py  tfidf_results_aggregation.py  tfidf_topic_simplifying.py  topic_simplifying.py
tests/: __init__.py  conftest.py  test_topic_simplifying.py
