[project]
name = "topic-extractor"
version = "0.1.0"
description = "Extract topics from a text based on demographics"
readme = "README.md"
authors = [
    { name = "Kent Nolan", email = "kent.nolan@gmail.com"},
    { name = "Pedro Mroninski", email = "pedro.mroninski@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.1",
    "duckdb>=1.3.0",
    "langdetect>=1.0.9",
    "lxml>=5.4.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pip==25.1.1",
    "polars==1.29.0",
    "python-dateutil>=2.9.0",
    "scikit-learn>=1.6.1",
    "scipy==1.13.1",
    "gensim==4.3.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "nltk>=3.9.1",
    "deep-translator[ai]>=1.11.4",
]

[project.scripts]
topic_extractor = "topic_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
